# smithy-template

./: .gitignore  Cargo.toml  Makefile  README.md  test.http
_github/workflows/: smithy.yml
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/service/: Cargo.toml
crates/service/src/: api.rs  auth.rs  error.rs  lib.rs
crates/service/src/middleware/: bearer_auth.rs  mod.rs  server_timing.rs
smithy/: smithy-build.json
smithy/model/: error.smithy  main.smithy
